# gptchat-app

./: .gitignore  LICENSE.md  README.md  compose.yml  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: chat.py  config.py  gemini.py  main.py
backend/tests/: test_fastapi.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/: gemini.ts
frontend/src/app/api/auth/: auth.ts
frontend/src/app/api/auth/[...nextauth]/: routes.ts
frontend/src/app/components/: ChatClient.tsx  ChatMessage.tsx  Header.tsx  InputForm.tsx  Loading.tsx  Sidebar.tsx
frontend/src/app/components/ui/: Icon.tsx
frontend/src/app/hooks/: use-auth.tsx
frontend/src/app/redirect/: page.tsx
frontend/src/app/types/: custom.d.ts
frontend/src/constants/: auth.ts  constants.ts
frontend/src/hooks/: get-header.ts  use-auth.tsx  use-rag.tsx
frontend/src/states/: chatLogState.ts
src/app/: layout.tsx  page.tsx
src/app/api/auth/: auth.ts
src/app/components/: ChatClient.tsx  ChatMessage.tsx  InputForm.tsx
src/app/components/ui/: LoadingAnimation.tsx
src/app/states/: chatLogState.ts
